--- a/package.json
+++ b/package.json
@@ -11,13 +11,24 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.3.0",
+    "@angular/cdk": "^13.3.6",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
     "@angular/forms": "~13.3.0",
+    "@angular/localize": "~13.3.0",
+    "@angular/material": "^13.3.6",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@ng-bootstrap/ng-bootstrap": "^12.1.1",
+    "@popperjs/core": "^2.11.5",
+    "angular-bootstrap-md": "^13.0.0",
+    "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
+    "jquery": "^3.6.0",
+    "ng2-charts": "^3.0.10",
+    "ngx-bootstrap": "^8.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
